packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__issue_476.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 1977
expression: output
---
==INPUT==


import { Counter } from "./counter.tsx";

export const Root = () => {
    return (
        <html>
            <head>
                <meta charset="utf-8" />
                <title>Unisynth Blank App</title>
            </head>
            <body>
                <Counter initial={3} />
            </body>
        </html>
    );
};

============================= test.tsx ==

import { Counter } from "./counter.tsx";
export const Root = ()=>{
    return <html>
            <head>
                <meta charset="utf-8"/>
                <title>Unisynth Blank App</title>
            </head>
            <body>
                <Counter initial={3}/>
            </body>
        </html>;
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\"AACA,SAAS,OAAO,QAAQ,gBAAgB;AAExC,OAAO,MAAM,OAAO;IAChB,QACK,KAAK;YACF,CAAC,KAAK;gBACF,CAAC,KAAK,QAAQ,SAAU;gBACxB,CAAC,MAAM,cAAc,EAAE,MAAM;YACjC,EAAE,KAAK;YACP,CAAC,KAAK;gBACF,CAAC,QAAQ,SAAS,IAAK;YAC3B,EAAE,KAAK;QACX,EAAE;AAEV,EAAE\"}")
== DIAGNOSTICS ==

[]
