packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__issue_964.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 2004
expression: output
---
==INPUT==


import { component$ } from '@khulnasoft.com/unisynth';

export const App = component$(() => {
    console.log(function*(lo: any, t: any) {
    console.log(yield (yield lo)(t.href).then((r) => r.json()));
    });

    return <p>Hello Unisynth</p>;
});

============================= test.js ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,iHAMhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxQ } from "@khulnasoft.com/unisynth";
export const App_component_ckEPmXZlub0 = ()=>{
    console.log(function*(lo, t) {
        console.log((yield (yield lo)(t.href).then((r)=>r.json())));
    });
    return /*#__PURE__*/ _jsxQ("p", null, null, "Hello Unisynth", 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";yCAG8B;IAC1B,QAAQ,GAAG,CAAC,UAAU,EAAO,EAAE,CAAM;QACrC,QAAQ,GAAG,CAAC,CAAA,MAAM,CAAC,MAAM,EAAE,EAAE,EAAE,IAAI,EAAE,IAAI,CAAC,CAAC,IAAM,EAAE,IAAI,GAAE;IACzD;IAEA,qBAAO,MAAC,iBAAE;AACd\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    80,
    238
  ]
}
*/
== DIAGNOSTICS ==

[]
